fix: partial revert of "fix: exclude v4 apis when fetching apis"
This partially reverts commit 8984f08aad339fe5beb8678950a4335391231265.